<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="152.7dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mobile"
                    android:layout_width="99.7dp"
                    android:layout_height="152.7dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/modelname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/iphone_6s_32gb_golden_and_silver"
                        android:textColor="@color/Primarytext"
                        android:textSize="13.3sp" />

                    <LinearLayout
                        android:layout_marginTop="7.3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/dashedline_rectangle_full"
                            android:fontFamily="@font/roboto_bold"
                            android:text="@string/_1_34_900"
                            android:textColor="#0f0d0d"
                            android:paddingLeft="12dp"
                            android:paddingRight="12dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:textSize="14.3sp" />

                        <TextView
                            android:layout_marginLeft="7.2dp"
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cutprice"/>

                    </LinearLayout>

                    <TextView
                        android:layout_marginTop="7dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_60_off"
                        android:background="@drawable/rect_greybg"
                        android:textColor="@color/brown"
                        android:textSize="12sp"/>


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>