<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">



            <com.richkart.android.customfonts.TextViewSFProDisplayMedium
                android:id="@+id/txtCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginRight="5dp"
                android:paddingTop="16.5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="16.5dp"
                android:text="@string/camera"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="13.7sp" />

            <com.richkart.android.customfonts.TextViewSFProDisplayMedium
                android:id="@+id/txtGallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginRight="5dp"
                android:paddingTop="16.5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="16.5dp"
                android:text="@string/gallery"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="13.7sp" />

            <com.richkart.android.customfonts.TextViewSFProDisplayMedium
                android:id="@+id/txtCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginRight="5dp"
                android:paddingTop="16.5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="16.5dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="13.7sp" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>