<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f6f7">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/toolbar_product_grid_detail" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="17.7dp"
                    android:paddingBottom="17.3sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/popular"
                        android:textColor="#d44334"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/low_price"
                        android:textColor="#808080"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/high_price"
                        android:layout_gravity="center"
                        android:textColor="#808080"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/tv4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:text="@string/sale"
                        android:textColor="#808080"
                        android:textSize="13sp" />
                </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/rect_black"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <TextView
                        android:fontFamily="@font/roboto_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type_beauty_amp_personal_care"
                        android:textColor="@color/white"
                        android:letterSpacing="0.0400"
                        android:textSize="12.5sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/cancel" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recy_list3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:paddingLeft="2.5dp"
                    android:paddingRight="2.5dp" />

                    </LinearLayout>

                </android.support.v4.widget.NestedScrollView>

            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:src="@drawable/filter" />
    </LinearLayout>

</RelativeLayout>