<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        app:cardElevation="1dp"
        android:layout_width="match_parent"
        android:layout_height="148.7dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginTop="19dp"
                    android:scaleType="fitStart"
                    android:layout_gravity="top"
                    android:id="@+id/mobile"
                    android:layout_width="99.7dp"
                    android:layout_height="162.7dp"
                    android:src="@drawable/img"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/company"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/apple"
                        android:textColor="@color/lightgreen"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/model"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/apple_iphone_xs_max_space_grey_256_gb"
                        android:textColor="@color/titletxt"
                        android:textSize="13.3sp" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/_1_34_900"
                        android:textColor="@color/red"
                        android:textSize="14.3sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:gravity="right"
                        android:orientation="horizontal">


                        <RatingBar
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:isIndicator="false"
                            android:max="5"
                            android:numStars="5"
                            android:progressTint="#8a000000"
                            android:rating="2.5" />


                        <TextView
                            android:fontFamily="@font/roboto_medium"
                            android:id="@+id/reviewrating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="8dp"
                            android:text="@string/_764_ratings"
                            android:textColor="@color/grey"
                            android:textSize="11.3sp" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>