<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        app:cardElevation="2dp"
        android:layout_width="match_parent"
        android:layout_height="102.7dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/white"
        app:cardBackgroundColor="@color/white">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:scaleType="centerInside"
                    android:id="@+id/mobile"
                    android:layout_width="99.7dp"
                    android:layout_height="102.7dp"
                    android:src="@drawable/img"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17.7dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/iphone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/apple_iphone_xs_max_space_grey"
                        android:textColor="@color/Primarytext"
                        android:textSize="12.7sp" />

                        <ImageView
                            android:layout_marginRight="12dp"
                            android:layout_width="7dp"
                            android:layout_height="13.5dp"
                            android:src="@drawable/option"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/apple"
                        android:letterSpacing="0.015"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/apple"
                        android:textColor="@color/lightgreen"
                        android:textSize="12sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="13dp"
                        android:orientation="horizontal">


                        <RatingBar
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:isIndicator="false"
                            android:max="5"
                            android:numStars="5"
                            android:progressTint="#8a000000"
                            android:rating="2.5" />

                        <TextView
                            android:fontFamily="@font/roboto_regular"
                            android:id="@+id/reviewrating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:text="@string/_764_ratings"
                            android:textColor="@color/grey"
                            android:textSize="11.3sp" />

                        <TextView
                            android:id="@+id/price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="14dp"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/_1_34_900"
                            android:textColor="@color/red"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>